# assecor-assessment-cpp

./: .gitignore  CMakeLists.txt
apps/customer_console/: main.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake
include/: customer.h
include/customer/: customer_archive.hpp  customer_formatter.hpp  in_memory_store.hpp  storage.hpp
src/: customer_archive.cpp  customer_formatter.cpp  in_memory_store.cpp
tests/: CMakeLists.txt
tests/integration/: test_end_to_end.cpp
tests/unit/: test_customer_archive.cpp  test_customer_formatter.cpp
